Added Quickstart.scala script to runQuickStart target.